Project2/code/y.output
Terminals unused in grammar

    QUOTATION_MARK
    EXCLAMATION_MARK
    DOT
    APOSTROPHE


State 77 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: statement_list

    2 statement_list: statement
    3               | statement statement_list

    4 statement: COMMENT
    5          | expression SEMICOLON
    6          | loop
    7          | if
    8          | function_definition

    9 data_type: INT_TYPE
   10          | FLOAT_TYPE
   11          | CHAR_TYPE
   12          | BOOLEAN_TYPE

   13 loop: while_loop
   14     | for_loop

   15 while_loop: WHILE LP logical_expression RP LCB statement_list RCB

   16 for_loop: FOR LP for_loop_expression RP LCB statement_list RCB

   17 for_loop_expression: assignment SEMICOLON BOOLEAN SEMICOLON assignment

   18 if: IF LP logical_expression RP LCB statement_list RCB else
   19   | IF LP logical_expression RP LCB statement_list RCB

   20 else: ELSE LCB statement_list RCB

   21 expression: expression PLUS expression2
   22           | expression MINUS expression2
   23           | expression2

   24 expression2: expression2 MULTIPLICATION expression3
   25            | expression2 DIVISION expression3
   26            | expression2 REMAINDER expression3
   27            | expression3

   28 expression3: expression4 EXPONENTIATION expression3
   29            | expression4

   30 expression4: LP expression RP
   31            | expr

   32 expr: INT
   33     | function_call
   34     | logical_expression
   35     | IDENTIFIER

   36 function_call: IDENTIFIER LP function_call_argument_list RP
   37              | primitive_function_call
   38              | input_statement
   39              | output_statement

   40 logical_expression: comparison
   41                   | basic_equality
   42                   | logical_expression OR logical_expression2
   43                   | logical_expression2

   44 logical_expression2: logical_expression2 AND logical_expression3
   45                    | logical_expression3

   46 logical_expression3: LP logical_expression RP
   47                    | BOOLEAN

   48 basic_equality: equality_element equality_operator equality_element

   49 equality_element: INT
   50                 | BOOLEAN
   51                 | IDENTIFIER
   52                 | function_call

   53 equality_operator: EQUAL
   54                  | NOT_EQUAL

   55 comparison: comparison_element comparison_operator comparison_element

   56 comparison_element: INT
   57                   | IDENTIFIER
   58                   | function_call

   59 comparison_operator: GREATER_THAN
   60                    | SMALLER_THAN
   61                    | GREATER_OR_EQUAL
   62                    | SMALLER_OR_EQUAL

   63 assignment: IDENTIFIER ASSIGNMENT_OPERATOR expression
   64           | data_type IDENTIFIER ASSIGNMENT_OPERATOR expression

   65 function_definition: void_with_return
   66                    | void_without_return
   67                    | non_void_func_def
   68                    | only_return_func_def

   69 void_with_return: VOID_TYPE IDENTIFIER LP function_definition_argument_list RP LCB statement_list void_return_statement RCB

   70 void_without_return: VOID_TYPE IDENTIFIER LP function_definition_argument_list RP LCB statement_list RCB

   71 non_void_func_def: data_type IDENTIFIER LP function_definition_argument_list RP LCB statement_list return_statement RCB

   72 only_return_func_def: data_type IDENTIFIER LP function_definition_argument_list RP LCB return_statement RCB

   73 void_return_statement: RETURN SEMICOLON

   74 return_statement: RETURN expression SEMICOLON

   75 function_definition_argument_list: function_definition_argument COMMA function_definition_argument_list
   76                                  | function_definition_argument
   77                                  | EMPTY

   78 function_definition_argument: INT_TYPE IDENTIFIER
   79                             | FLOAT_TYPE IDENTIFIER
   80                             | CHAR_TYPE IDENTIFIER
   81                             | BOOLEAN_TYPE IDENTIFIER

   82 function_call_argument_list: function_call_argument COMMA function_call_argument_list
   83                            | function_call_argument
   84                            | EMPTY

   85 function_call_argument: INT
   86                       | FLOAT
   87                       | CHAR
   88                       | BOOLEAN
   89                       | IDENTIFIER
   90                       | function_call

   91 input_statement: SCAN LP RP SEMICOLON

   92 output_statement: PRINT LP expression RP SEMICOLON

   93 primitive_function_call: read_inclination_function
   94                        | read_altitude_function
   95                        | read_temperature_function
   96                        | read_acceleration_function
   97                        | set_camera_state_function
   98                        | take_picture_function
   99                        | read_timestamp_function
  100                        | connect_to_computer_function

  101 read_inclination_function: READ_INCLINATION LP RP

  102 read_altitude_function: READ_ALTITUDE LP RP

  103 read_temperature_function: READ_TEMPERATURE LP RP

  104 read_acceleration_function: READ_ACCELERATION LP RP

  105 set_camera_state_function: SET_CAMERA_STATE LP BOOLEAN RP

  106 take_picture_function: TAKE_PICTURE LP RP

  107 read_timestamp_function: READ_TIMESTAMP LP RP

  108 connect_to_computer_function: CONNECT_TO_COMPUTER LP RP


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT_TYPE (258) 9 78
    FLOAT_TYPE (259) 10 79
    CHAR_TYPE (260) 11 80
    BOOLEAN_TYPE (261) 12 81
    VOID_TYPE (262) 69 70
    RETURN (263) 73 74
    INT (264) 32 49 56 85
    FLOAT (265) 86
    CHAR (266) 87
    BOOLEAN (267) 17 47 50 88 105
    IF (268) 18 19
    ELSE (269) 20
    WHILE (270) 15
    FOR (271) 16
    SCAN (272) 91
    PRINT (273) 92
    READ_INCLINATION (274) 101
    READ_ALTITUDE (275) 102
    READ_TEMPERATURE (276) 103
    READ_ACCELERATION (277) 104
    SET_CAMERA_STATE (278) 105
    TAKE_PICTURE (279) 106
    READ_TIMESTAMP (280) 107
    CONNECT_TO_COMPUTER (281) 108
    IDENTIFIER (282) 35 36 51 57 63 64 69 70 71 72 78 79 80 81 89
    COMMENT (283) 4
    ASSIGNMENT_OPERATOR (284) 63 64
    LP (285) 15 16 18 19 30 36 46 69 70 71 72 91 92 101 102 103 104 105 106 107 108
    RP (286) 15 16 18 19 30 36 46 69 70 71 72 91 92 101 102 103 104 105 106 107 108
    LCB (287) 15 16 18 19 20 69 70 71 72
    RCB (288) 15 16 18 19 20 69 70 71 72
    GREATER_THAN (289) 59
    SMALLER_THAN (290) 60
    GREATER_OR_EQUAL (291) 61
    SMALLER_OR_EQUAL (292) 62
    PLUS (293) 21
    MINUS (294) 22
    MULTIPLICATION (295) 24
    DIVISION (296) 25
    REMAINDER (297) 26
    EXPONENTIATION (298) 28
    AND (299) 44
    OR (300) 42
    EQUAL (301) 53
    NOT_EQUAL (302) 54
    SEMICOLON (303) 5 17 73 74 91 92
    COMMA (304) 75 82
    QUOTATION_MARK (305)
    EXCLAMATION_MARK (306)
    DOT (307)
    APOSTROPHE (308)
    EMPTY (309) 77 84


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    start (56)
        on left: 1
        on right: 0
    statement_list (57)
        on left: 2 3
        on right: 1 3 15 16 18 19 20 69 70 71
    statement (58)
        on left: 4 5 6 7 8
        on right: 2 3
    data_type (59)
        on left: 9 10 11 12
        on right: 64 71 72
    loop (60)
        on left: 13 14
        on right: 6
    while_loop (61)
        on left: 15
        on right: 13
    for_loop (62)
        on left: 16
        on right: 14
    for_loop_expression (63)
        on left: 17
        on right: 16
    if (64)
        on left: 18 19
        on right: 7
    else (65)
        on left: 20
        on right: 18
    expression (66)
        on left: 21 22 23
        on right: 5 21 22 30 63 64 74 92
    expression2 (67)
        on left: 24 25 26 27
        on right: 21 22 23 24 25 26
    expression3 (68)
        on left: 28 29
        on right: 24 25 26 27 28
    expression4 (69)
        on left: 30 31
        on right: 28 29
    expr (70)
        on left: 32 33 34 35
        on right: 31
    function_call (71)
        on left: 36 37 38 39
        on right: 33 52 58 90
    logical_expression (72)
        on left: 40 41 42 43
        on right: 15 18 19 34 42 46
    logical_expression2 (73)
        on left: 44 45
        on right: 42 43 44
    logical_expression3 (74)
        on left: 46 47
        on right: 44 45
    basic_equality (75)
        on left: 48
        on right: 41
    equality_element (76)
        on left: 49 50 51 52
        on right: 48
    equality_operator (77)
        on left: 53 54
        on right: 48
    comparison (78)
        on left: 55
        on right: 40
    comparison_element (79)
        on left: 56 57 58
        on right: 55
    comparison_operator (80)
        on left: 59 60 61 62
        on right: 55
    assignment (81)
        on left: 63 64
        on right: 17
    function_definition (82)
        on left: 65 66 67 68
        on right: 8
    void_with_return (83)
        on left: 69
        on right: 65
    void_without_return (84)
        on left: 70
        on right: 66
    non_void_func_def (85)
        on left: 71
        on right: 67
    only_return_func_def (86)
        on left: 72
        on right: 68
    void_return_statement (87)
        on left: 73
        on right: 69
    return_statement (88)
        on left: 74
        on right: 71 72
    function_definition_argument_list (89)
        on left: 75 76 77
        on right: 69 70 71 72 75
    function_definition_argument (90)
        on left: 78 79 80 81
        on right: 75 76
    function_call_argument_list (91)
        on left: 82 83 84
        on right: 36 82
    function_call_argument (92)
        on left: 85 86 87 88 89 90
        on right: 82 83
    input_statement (93)
        on left: 91
        on right: 38
    output_statement (94)
        on left: 92
        on right: 39
    primitive_function_call (95)
        on left: 93 94 95 96 97 98 99 100
        on right: 37
    read_inclination_function (96)
        on left: 101
        on right: 93
    read_altitude_function (97)
        on left: 102
        on right: 94
    read_temperature_function (98)
        on left: 103
        on right: 95
    read_acceleration_function (99)
        on left: 104
        on right: 96
    set_camera_state_function (100)
        on left: 105
        on right: 97
    take_picture_function (101)
        on left: 106
        on right: 98
    read_timestamp_function (102)
        on left: 107
        on right: 99
    connect_to_computer_function (103)
        on left: 108
        on right: 100


State 0

    0 $accept: . start $end

    INT_TYPE             shift, and go to state 1
    FLOAT_TYPE           shift, and go to state 2
    CHAR_TYPE            shift, and go to state 3
    BOOLEAN_TYPE         shift, and go to state 4
    VOID_TYPE            shift, and go to state 5
    INT                  shift, and go to state 6
    BOOLEAN              shift, and go to state 7
    IF                   shift, and go to state 8
    WHILE                shift, and go to state 9
    FOR                  shift, and go to state 10
    SCAN                 shift, and go to state 11
    PRINT                shift, and go to state 12
    READ_INCLINATION     shift, and go to state 13
    READ_ALTITUDE        shift, and go to state 14
    READ_TEMPERATURE     shift, and go to state 15
    READ_ACCELERATION    shift, and go to state 16
    SET_CAMERA_STATE     shift, and go to state 17
    TAKE_PICTURE         shift, and go to state 18
    READ_TIMESTAMP       shift, and go to state 19
    CONNECT_TO_COMPUTER  shift, and go to state 20
    IDENTIFIER           shift, and go to state 21
    COMMENT              shift, and go to state 22
    LP                   shift, and go to state 23

    start                         go to state 24
    statement_list                go to state 25
    statement                     go to state 26
    data_type                     go to state 27
    loop                          go to state 28
    while_loop                    go to state 29
    for_loop                      go to state 30
    if                            go to state 31
    expression                    go to state 32
    expression2                   go to state 33
    expression3                   go to state 34
    expression4                   go to state 35
    expr                          go to state 36
    function_call                 go to state 37
    logical_expression            go to state 38
    logical_expression2           go to state 39
    logical_expression3           go to state 40
    basic_equality                go to state 41
    equality_element              go to state 42
    comparison                    go to state 43
    comparison_element            go to state 44
    function_definition           go to state 45
    void_with_return              go to state 46
    void_without_return           go to state 47
    non_void_func_def             go to state 48
    only_return_func_def          go to state 49
    input_statement               go to state 50
    output_statement              go to state 51
    primitive_function_call       go to state 52
    read_inclination_function     go to state 53
    read_altitude_function        go to state 54
    read_temperature_function     go to state 55
    read_acceleration_function    go to state 56
    set_camera_state_function     go to state 57
    take_picture_function         go to state 58
    read_timestamp_function       go to state 59
    connect_to_computer_function  go to state 60


State 1

    9 data_type: INT_TYPE .

    $default  reduce using rule 9 (data_type)


State 2

   10 data_type: FLOAT_TYPE .

    $default  reduce using rule 10 (data_type)


State 3

   11 data_type: CHAR_TYPE .

    $default  reduce using rule 11 (data_type)


State 4

   12 data_type: BOOLEAN_TYPE .

    $default  reduce using rule 12 (data_type)


State 5

   69 void_with_return: VOID_TYPE . IDENTIFIER LP function_definition_argument_list RP LCB statement_list void_return_statement RCB
   70 void_without_return: VOID_TYPE . IDENTIFIER LP function_definition_argument_list RP LCB statement_list RCB

    IDENTIFIER  shift, and go to state 61


State 6

   32 expr: INT .
   49 equality_element: INT .
   56 comparison_element: INT .

    GREATER_THAN      reduce using rule 56 (comparison_element)
    SMALLER_THAN      reduce using rule 56 (comparison_element)
    GREATER_OR_EQUAL  reduce using rule 56 (comparison_element)
    SMALLER_OR_EQUAL  reduce using rule 56 (comparison_element)
    EQUAL             reduce using rule 49 (equality_element)
    NOT_EQUAL         reduce using rule 49 (equality_element)
    $default          reduce using rule 32 (expr)


State 7

   47 logical_expression3: BOOLEAN .
   50 equality_element: BOOLEAN .

    EQUAL      reduce using rule 50 (equality_element)
    NOT_EQUAL  reduce using rule 50 (equality_element)
    $default   reduce using rule 47 (logical_expression3)


State 8

   18 if: IF . LP logical_expression RP LCB statement_list RCB else
   19   | IF . LP logical_expression RP LCB statement_list RCB

    LP  shift, and go to state 62


State 9

   15 while_loop: WHILE . LP logical_expression RP LCB statement_list RCB

    LP  shift, and go to state 63


State 10

   16 for_loop: FOR . LP for_loop_expression RP LCB statement_list RCB

    LP  shift, and go to state 64


State 11

   91 input_statement: SCAN . LP RP SEMICOLON

    LP  shift, and go to state 65


State 12

   92 output_statement: PRINT . LP expression RP SEMICOLON

    LP  shift, and go to state 66


State 13

  101 read_inclination_function: READ_INCLINATION . LP RP

    LP  shift, and go to state 67


State 14

  102 read_altitude_function: READ_ALTITUDE . LP RP

    LP  shift, and go to state 68


State 15

  103 read_temperature_function: READ_TEMPERATURE . LP RP

    LP  shift, and go to state 69


State 16

  104 read_acceleration_function: READ_ACCELERATION . LP RP

    LP  shift, and go to state 70


State 17

  105 set_camera_state_function: SET_CAMERA_STATE . LP BOOLEAN RP

    LP  shift, and go to state 71


State 18

  106 take_picture_function: TAKE_PICTURE . LP RP

    LP  shift, and go to state 72


State 19

  107 read_timestamp_function: READ_TIMESTAMP . LP RP

    LP  shift, and go to state 73


State 20

  108 connect_to_computer_function: CONNECT_TO_COMPUTER . LP RP

    LP  shift, and go to state 74


State 21

   35 expr: IDENTIFIER .
   36 function_call: IDENTIFIER . LP function_call_argument_list RP
   51 equality_element: IDENTIFIER .
   57 comparison_element: IDENTIFIER .

    LP  shift, and go to state 75

    GREATER_THAN      reduce using rule 57 (comparison_element)
    SMALLER_THAN      reduce using rule 57 (comparison_element)
    GREATER_OR_EQUAL  reduce using rule 57 (comparison_element)
    SMALLER_OR_EQUAL  reduce using rule 57 (comparison_element)
    EQUAL             reduce using rule 51 (equality_element)
    NOT_EQUAL         reduce using rule 51 (equality_element)
    $default          reduce using rule 35 (expr)


State 22

    4 statement: COMMENT .

    $default  reduce using rule 4 (statement)


State 23

   30 expression4: LP . expression RP
   46 logical_expression3: LP . logical_expression RP

    INT                  shift, and go to state 6
    BOOLEAN              shift, and go to state 7
    SCAN                 shift, and go to state 11
    PRINT                shift, and go to state 12
    READ_INCLINATION     shift, and go to state 13
    READ_ALTITUDE        shift, and go to state 14
    READ_TEMPERATURE     shift, and go to state 15
    READ_ACCELERATION    shift, and go to state 16
    SET_CAMERA_STATE     shift, and go to state 17
    TAKE_PICTURE         shift, and go to state 18
    READ_TIMESTAMP       shift, and go to state 19
    CONNECT_TO_COMPUTER  shift, and go to state 20
    IDENTIFIER           shift, and go to state 21
    LP                   shift, and go to state 23

    expression                    go to state 76
    expression2                   go to state 33
    expression3                   go to state 34
    expression4                   go to state 35
    expr                          go to state 36
    function_call                 go to state 37
    logical_expression            go to state 77
    logical_expression2           go to state 39
    logical_expression3           go to state 40
    basic_equality                go to state 41
    equality_element              go to state 42
    comparison                    go to state 43
    comparison_element            go to state 44
    input_statement               go to state 50
    output_statement              go to state 51
    primitive_function_call       go to state 52
    read_inclination_function     go to state 53
    read_altitude_function        go to state 54
    read_temperature_function     go to state 55
    read_acceleration_function    go to state 56
    set_camera_state_function     go to state 57
    take_picture_function         go to state 58
    read_timestamp_function       go to state 59
    connect_to_computer_function  go to state 60


State 24

    0 $accept: start . $end

    $end  shift, and go to state 78


State 25

    1 start: statement_list .

    $default  reduce using rule 1 (start)


State 26

    2 statement_list: statement .
    3               | statement . statement_list

    INT_TYPE             shift, and go to state 1
    FLOAT_TYPE           shift, and go to state 2
    CHAR_TYPE            shift, and go to state 3
    BOOLEAN_TYPE         shift, and go to state 4
    VOID_TYPE            shift, and go to state 5
    INT                  shift, and go to state 6
    BOOLEAN              shift, and go to state 7
    IF                   shift, and go to state 8
    WHILE                shift, and go to state 9
    FOR                  shift, and go to state 10
    SCAN                 shift, and go to state 11
    PRINT                shift, and go to state 12
    READ_INCLINATION     shift, and go to state 13
    READ_ALTITUDE        shift, and go to state 14
    READ_TEMPERATURE     shift, and go to state 15
    READ_ACCELERATION    shift, and go to state 16
    SET_CAMERA_STATE     shift, and go to state 17
    TAKE_PICTURE         shift, and go to state 18
    READ_TIMESTAMP       shift, and go to state 19
    CONNECT_TO_COMPUTER  shift, and go to state 20
    IDENTIFIER           shift, and go to state 21
    COMMENT              shift, and go to state 22
    LP                   shift, and go to state 23

    $default  reduce using rule 2 (statement_list)

    statement_list                go to state 79
    statement                     go to state 26
    data_type                     go to state 27
    loop                          go to state 28
    while_loop                    go to state 29
    for_loop                      go to state 30
    if                            go to state 31
    expression                    go to state 32
    expression2                   go to state 33
    expression3                   go to state 34
    expression4                   go to state 35
    expr                          go to state 36
    function_call                 go to state 37
    logical_expression            go to state 38
    logical_expression2           go to state 39
    logical_expression3           go to state 40
    basic_equality                go to state 41
    equality_element              go to state 42
    comparison                    go to state 43
    comparison_element            go to state 44
    function_definition           go to state 45
    void_with_return              go to state 46
    void_without_return           go to state 47
    non_void_func_def             go to state 48
    only_return_func_def          go to state 49
    input_statement               go to state 50
    output_statement              go to state 51
    primitive_function_call       go to state 52
    read_inclination_function     go to state 53
    read_altitude_function        go to state 54
    read_temperature_function     go to state 55
    read_acceleration_function    go to state 56
    set_camera_state_function     go to state 57
    take_picture_function         go to state 58
    read_timestamp_function       go to state 59
    connect_to_computer_function  go to state 60


State 27

   71 non_void_func_def: data_type . IDENTIFIER LP function_definition_argument_list RP LCB statement_list return_statement RCB
   72 only_return_func_def: data_type . IDENTIFIER LP function_definition_argument_list RP LCB return_statement RCB

    IDENTIFIER  shift, and go to state 80


State 28

    6 statement: loop .

    $default  reduce using rule 6 (statement)


State 29

   13 loop: while_loop .

    $default  reduce using rule 13 (loop)


State 30

   14 loop: for_loop .

    $default  reduce using rule 14 (loop)


State 31

    7 statement: if .

    $default  reduce using rule 7 (statement)


State 32

    5 statement: expression . SEMICOLON
   21 expression: expression . PLUS expression2
   22           | expression . MINUS expression2

    PLUS       shift, and go to state 81
    MINUS      shift, and go to state 82
    SEMICOLON  shift, and go to state 83


State 33

   23 expression: expression2 .
   24 expression2: expression2 . MULTIPLICATION expression3
   25            | expression2 . DIVISION expression3
   26            | expression2 . REMAINDER expression3

    MULTIPLICATION  shift, and go to state 84
    DIVISION        shift, and go to state 85
    REMAINDER       shift, and go to state 86

    $default  reduce using rule 23 (expression)


State 34

   27 expression2: expression3 .

    $default  reduce using rule 27 (expression2)


State 35

   28 expression3: expression4 . EXPONENTIATION expression3
   29            | expression4 .

    EXPONENTIATION  shift, and go to state 87

    $default  reduce using rule 29 (expression3)


State 36

   31 expression4: expr .

    $default  reduce using rule 31 (expression4)


State 37

   33 expr: function_call .
   52 equality_element: function_call .
   58 comparison_element: function_call .

    GREATER_THAN      reduce using rule 58 (comparison_element)
    SMALLER_THAN      reduce using rule 58 (comparison_element)
    GREATER_OR_EQUAL  reduce using rule 58 (comparison_element)
    SMALLER_OR_EQUAL  reduce using rule 58 (comparison_element)
    EQUAL             reduce using rule 52 (equality_element)
    NOT_EQUAL         reduce using rule 52 (equality_element)
    $default          reduce using rule 33 (expr)


State 38

   34 expr: logical_expression .
   42 logical_expression: logical_expression . OR logical_expression2

    OR  shift, and go to state 88

    $default  reduce using rule 34 (expr)


State 39

   43 logical_expression: logical_expression2 .
   44 logical_expression2: logical_expression2 . AND logical_expression3

    AND  shift, and go to state 89

    $default  reduce using rule 43 (logical_expression)


State 40

   45 logical_expression2: logical_expression3 .

    $default  reduce using rule 45 (logical_expression2)


State 41

   41 logical_expression: basic_equality .

    $default  reduce using rule 41 (logical_expression)


State 42

   48 basic_equality: equality_element . equality_operator equality_element

    EQUAL      shift, and go to state 90
    NOT_EQUAL  shift, and go to state 91

    equality_operator  go to state 92


State 43

   40 logical_expression: comparison .

    $default  reduce using rule 40 (logical_expression)


State 44

   55 comparison: comparison_element . comparison_operator comparison_element

    GREATER_THAN      shift, and go to state 93
    SMALLER_THAN      shift, and go to state 94
    GREATER_OR_EQUAL  shift, and go to state 95
    SMALLER_OR_EQUAL  shift, and go to state 96

    comparison_operator  go to state 97


State 45

    8 statement: function_definition .

    $default  reduce using rule 8 (statement)


State 46

   65 function_definition: void_with_return .

    $default  reduce using rule 65 (function_definition)


State 47

   66 function_definition: void_without_return .

    $default  reduce using rule 66 (function_definition)


State 48

   67 function_definition: non_void_func_def .

    $default  reduce using rule 67 (function_definition)


State 49

   68 function_definition: only_return_func_def .

    $default  reduce using rule 68 (function_definition)


State 50

   38 function_call: input_statement .

    $default  reduce using rule 38 (function_call)


State 51

   39 function_call: output_statement .

    $default  reduce using rule 39 (function_call)


State 52

   37 function_call: primitive_function_call .

    $default  reduce using rule 37 (function_call)


State 53

   93 primitive_function_call: read_inclination_function .

    $default  reduce using rule 93 (primitive_function_call)


State 54

   94 primitive_function_call: read_altitude_function .

    $default  reduce using rule 94 (primitive_function_call)


State 55

   95 primitive_function_call: read_temperature_function .

    $default  reduce using rule 95 (primitive_function_call)


State 56

   96 primitive_function_call: read_acceleration_function .

    $default  reduce using rule 96 (primitive_function_call)


State 57

   97 primitive_function_call: set_camera_state_function .

    $default  reduce using rule 97 (primitive_function_call)


State 58

   98 primitive_function_call: take_picture_function .

    $default  reduce using rule 98 (primitive_function_call)


State 59

   99 primitive_function_call: read_timestamp_function .

    $default  reduce using rule 99 (primitive_function_call)


State 60

  100 primitive_function_call: connect_to_computer_function .

    $default  reduce using rule 100 (primitive_function_call)


State 61

   69 void_with_return: VOID_TYPE IDENTIFIER . LP function_definition_argument_list RP LCB statement_list void_return_statement RCB
   70 void_without_return: VOID_TYPE IDENTIFIER . LP function_definition_argument_list RP LCB statement_list RCB

    LP  shift, and go to state 98


State 62

   18 if: IF LP . logical_expression RP LCB statement_list RCB else
   19   | IF LP . logical_expression RP LCB statement_list RCB

    INT                  shift, and go to state 99
    BOOLEAN              shift, and go to state 7
    SCAN                 shift, and go to state 11
    PRINT                shift, and go to state 12
    READ_INCLINATION     shift, and go to state 13
    READ_ALTITUDE        shift, and go to state 14
    READ_TEMPERATURE     shift, and go to state 15
    READ_ACCELERATION    shift, and go to state 16
    SET_CAMERA_STATE     shift, and go to state 17
    TAKE_PICTURE         shift, and go to state 18
    READ_TIMESTAMP       shift, and go to state 19
    CONNECT_TO_COMPUTER  shift, and go to state 20
    IDENTIFIER           shift, and go to state 100
    LP                   shift, and go to state 101

    function_call                 go to state 102
    logical_expression            go to state 103
    logical_expression2           go to state 39
    logical_expression3           go to state 40
    basic_equality                go to state 41
    equality_element              go to state 42
    comparison                    go to state 43
    comparison_element            go to state 44
    input_statement               go to state 50
    output_statement              go to state 51
    primitive_function_call       go to state 52
    read_inclination_function     go to state 53
    read_altitude_function        go to state 54
    read_temperature_function     go to state 55
    read_acceleration_function    go to state 56
    set_camera_state_function     go to state 57
    take_picture_function         go to state 58
    read_timestamp_function       go to state 59
    connect_to_computer_function  go to state 60


State 63

   15 while_loop: WHILE LP . logical_expression RP LCB statement_list RCB

    INT                  shift, and go to state 99
    BOOLEAN              shift, and go to state 7
    SCAN                 shift, and go to state 11
    PRINT                shift, and go to state 12
    READ_INCLINATION     shift, and go to state 13
    READ_ALTITUDE        shift, and go to state 14
    READ_TEMPERATURE     shift, and go to state 15
    READ_ACCELERATION    shift, and go to state 16
    SET_CAMERA_STATE     shift, and go to state 17
    TAKE_PICTURE         shift, and go to state 18
    READ_TIMESTAMP       shift, and go to state 19
    CONNECT_TO_COMPUTER  shift, and go to state 20
    IDENTIFIER           shift, and go to state 100
    LP                   shift, and go to state 101
